--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,66 @@
-<!DOCTYPE html>
+<!--A Design by W3layouts
+Author: W3layout
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE HTML>
 <html ng-app="main">
 <head>
-    <meta charset="UTF-8">
-    <title>OpenDataVisualizer</title>
+<title>The Bak-one Website Template | Home :: w3layouts</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<script src="js/libraries/jquery.min.js"></script>
+
+	<link rel="stylesheet" href="http://openlayers.org/en/v3.10.1/css/ol.css" type="text/css">
+	<style>
+		.map {
+			height: 100%;
+			width: 100%;
+		}
+	</style>
+	<script src="http://openlayers.org/en/v3.10.1/build/ol.js" type="text/javascript"></script>
 </head>
+
 <body ng-controller="mainController as main">
-    <span ng-bind="main.hello"></span>
-    <a href="" ng-click="main.toAbout()">About</a>
-    <ng-view></ng-view>
+<div style="margin-left: 10%; margin-right: 10%; height: 100%">
+	<div class="header_bg">
+		<div class="wrap">
+			<div class="header">
+				<!--------start-logo------>
+				<div class="logo">
+					<img style="height: 50px; vertical-align: text-top" src="images/logo.png" alt="" />
+					<p style="display: inline-block; font-size: xx-large; vertical-align: text-top">Візуалізація відкритих даних</p>
+				</div>
+				<!--------end-logo--------->
+				<!----start-nav-------->
+				<div class="nav">
+					<ul>
+						<li id="dataButton" class="fakelink"><a ng-click="main.toData()" class="scroll">Дані</a></li>
+						<li id="graphicButton" class="fakelink"><a ng-click="main.toGraphic()" class="scroll">Інфографіка</a></li>
+						<li id="mapButton" class="fakelink"><a ng-click="main.toMap()" class="scroll">Карта</a></li>
+						<div class="clear"> </div>
+					</ul>
+				</div>
+				<!-----end-nav-------->
+				<div class="clear"> </div>
+			</div>
+		</div>
+	</div>
+	<!------end-header------------>
+	<div class="container" style="height: 80%">
+		<div class="left">
+			<ng-view></ng-view>
+		</div>
+		<div class="right">
+			RIGHT
+			Search will be here
+		</div>
+	</div>
+</div>
+<!----start-header----------->
 
 <script type="text/javascript" src="/js/libraries/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
@@ -15,8 +68,10 @@
 <script type="text/javascript" src="/js/libraries/angular-route.min.js"></script>
 <script type="text/javascript" src="/js/libraries/underscore-min.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
-<script type="text/javascript" src="/js/controllers/mainController.js"></script>
 <script type="text/javascript" src="/js/routing.js"></script>
-<script type="text/javascript" src="/pages/about/aboutController.js"></script>
+<script type="text/javascript" src="/js/controllers/mainController.js"></script>
+<script type="text/javascript" src="/js/controllers/dataController.js"></script>
+<script type="text/javascript" src="/js/controllers/graphicController.js"></script>
+<script type="text/javascript" src="/js/controllers/mapController.js"></script>
 </body>
 </html>
