--- a/views/index.html
+++ b/views/index.html
@@ -7,21 +7,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html ng-app="main">
 <head>
-<title>The Bak-one Website Template | Home :: w3layouts</title>
+<title>Візуалізація відкритих даних</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <script src="js/libraries/jquery.min.js"></script>
-
-	<link rel="stylesheet" href="http://openlayers.org/en/v3.10.1/css/ol.css" type="text/css">
-	<style>
-		.map {
-			height: 100%;
-			width: 100%;
-		}
-	</style>
-	<script src="http://openlayers.org/en/v3.10.1/build/ol.js" type="text/javascript"></script>
+<script src="http://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
 </head>
 
 <body ng-controller="mainController as main">
@@ -51,7 +43,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!------end-header------------>
 	<div class="container" style="height: 80%">
-		<div class="left">
+		<div class="left" style="height: 100%">
 			<ng-view></ng-view>
 		</div>
 		<div class="right">
