--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="wrap">
 			<div class="header">
 				<!--------start-logo------>
+				<div id="main">
 				<div class="logo">
 					<img style="height: 50px; vertical-align: text-top" src="images/logo.png" alt="" />
 					<p style="display: inline-block; font-size: xx-large; vertical-align: text-top">Візуалізація відкритих даних</p>
@@ -36,6 +37,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clear"> </div>
 					</ul>
 				</div>
+			</div>
 				<!-----end-nav-------->
 				<div class="clear"> </div>
 			</div>
