--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1150,6 +1150,8 @@ padding: 1.2em 0em;
 }
 }
 
+/*style*/
+
 body, html {
 	margin:0;
 	height: 100%;
@@ -1180,4 +1182,22 @@ body, html {
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+/*table*/
+table, th, td {
+	border: 1px solid black;
+}
+
+.table {
+	overflow-y: scroll;
+}
+
+#table-scroll {
+	height:540px;
+	overflow:auto;
+	/*margin-top:20px;*/
+}
+#table-wrapper table {
+	width:100%;
 }
