--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,3 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html ng-app="main">
 <head>
@@ -13,7 +7,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <script src="js/libraries/jquery.min.js"></script>
-<script src="http://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
 </head>
 
 <body ng-controller="mainController as main">
@@ -21,14 +14,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="header_bg">
 		<div class="wrap">
 			<div class="header">
-				<!--------start-logo------>
 				<div id="main">
 				<div class="logo">
 					<img style="height: 50px; vertical-align: text-top" src="images/logo.png" alt="" />
 					<p style="display: inline-block; font-size: xx-large; vertical-align: text-top">Візуалізація відкритих даних</p>
 				</div>
-				<!--------end-logo--------->
-				<!----start-nav-------->
 				<div class="nav">
 					<ul>
 						<li id="dataButton" class="fakelink"><a ng-click="main.toData()" class="scroll">Дані</a></li>
@@ -38,23 +28,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</ul>
 				</div>
 			</div>
-				<!-----end-nav-------->
 				<div class="clear"> </div>
 			</div>
 		</div>
 	</div>
-	<!------end-header------------>
 	<div class="container" style="height: 80%">
 		<div class="left" style="height: 100%">
 			<ng-view></ng-view>
 		</div>
-		<div class="right">
-			RIGHT
-			Search will be here
+		<div class="right" ng-controller="filterController as filter">
+
 		</div>
 	</div>
 </div>
-<!----start-header----------->
 
 <script type="text/javascript" src="/js/libraries/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
@@ -63,9 +49,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script type="text/javascript" src="/js/libraries/underscore-min.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
 <script type="text/javascript" src="/js/routing.js"></script>
+<script type="text/javascript" src="/js/factories/DatasetFactory.js"></script>
 <script type="text/javascript" src="/js/controllers/mainController.js"></script>
 <script type="text/javascript" src="/js/controllers/dataController.js"></script>
 <script type="text/javascript" src="/js/controllers/graphicController.js"></script>
 <script type="text/javascript" src="/js/controllers/mapController.js"></script>
+<script type="text/javascript" src="/js/controllers/filterController.js"></script>
 </body>
 </html>
