--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1210,3 +1210,12 @@ table, th, td {
 	position: relative;
 	padding: 10px;
 }
+
+html, body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+#map {
+	height: 100%;
+}
