--- a/views/index.html
+++ b/views/index.html
@@ -9,12 +9,55 @@
 <script src="js/libraries/jquery.min.js"></script>
 	<script type="text/javascript">
 		var map;
+
+		
 		function initMap() {
 			map = new google.maps.Map(document.getElementById('map'), {
 				center: {lat: 46.4447, lng: 30.6983},
 				zoom: 8
 			});
 		}
+			
+
+ 
+		function highlightArea() {
+			var e = document.getElementById("district");
+			var strUser = e.options[e.selectedIndex].text;
+				if(strUser == 'Біляєвський') {	   
+					moveMap(46.571497, 30.331853);
+					var triangleCoords = [
+  						{lat: 46.631412, lng: 29.962437},
+   						 {lat: 46.628583, lng: 30.153325},
+   						 {lat: 46.522384, lng: 30.658696}
+  		];
+
+  // Construct the polygon.
+  			var district = new google.maps.Polygon({
+    			paths: triangleCoords,
+    			strokeColor: '#FF0000',
+    			strokeOpacity: 0.8,
+    			strokeWeight: 2,
+    			fillColor: '#FF0000',
+    			fillOpacity: 0.35
+  			});
+
+  			district.setMap(map);
+  			google.maps.event.addListener(district, 'click', function() {
+     			 this.setMap(null);
+  			});
+	}
+}
+
+	function moveMap(lat, lng) {
+		var center = new google.maps.LatLng(lat, lng);
+    // using global variable:
+   		 map.panTo(center);
+   		 map.setZoom(10);
+	}
+
+	function removePolygon() {
+		 bermudaTriangle.setMap(null);
+	}
 	</script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ&callback=initMap"></script>
 </head>
@@ -65,11 +108,14 @@
 				<span ng-if="field.type == 'range'">{{field.selectedVal}}</span>
 			</div>
 			<br>
-			<button ng-click="filter.applyFilter();">Apply</button>
+			<button ng-click="filter.applyFilter();" onclick="highlightArea()">Apply</button>
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
 
+
+</script>
 <script type="text/javascript" src="/js/libraries/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/libraries/angular.min.js"></script>
