--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
 		function highlightArea() {
 			var e = document.getElementById("district");
 			var strUser = e.options[e.selectedIndex].text;
-				if(strUser == 'Біляєвський') {	   
+				if(strUser == 'Біляєвський') {
 					moveMap(46.571497, 30.331853);
 					var triangleCoords = [
   						{lat: 46.631412, lng: 29.962437},
@@ -114,7 +114,7 @@
 </div>
 <script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
 <script type="text/javascript" src="/js/libraries/jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
+<!--<script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>-->
 <script type="text/javascript" src="/js/libraries/angular.min.js"></script>
 <script type="text/javascript" src="/js/libraries/angular-route.min.js"></script>
 <script type="text/javascript" src="/js/libraries/underscore-min.js"></script>
