--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
 			<div ng-repeat="field in filter.fields">
 				<label ng-if="field.type == 'select'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
 				<br>
-				<select class="dropdown" ng-if="field.type == 'select'" id="{{field.id}}" ng-model="field.selectedVal">
+				<select class="dropdown" ng-change="filter.applyFilter(field.id, field.selectedVal)"  ng-if="field.type == 'select'" id="{{field.id}}" ng-model="field.selectedVal">
 					<option value="-1" selected="selected">------</option>
 					<option ng-repeat="value in field.values" value="{{value.id}}">{{value.name}}</option>
 				</select>
@@ -55,10 +55,10 @@
 					   min="{{field.minVal}}"
 					   max="{{field.maxVal}}"
 					   ng-model="field.selectedVal"
+					   ng-change="filter.applyFilter(field.id, field.selectedVal)"
 					   step="1">
 				<span ng-if="field.type == 'range'">{{field.selectedVal}}</span>
 			</div>
-			<button ng-click="filter.applyFilter();">Apply</button>
 		</div>
 	</div>
 </div>
