uncommented graphics, add coffeescript

--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,8 @@
 <script type="text/javascript" src="/js/factories/DatasetFactory.js"></script>
 <script type="text/javascript" src="/js/factories/FilterFactory.js"></script>
 <script type="text/javascript" src="/js/controllers/mainController.js"></script>
-<script type="text/javascript" src="/js/controllers/dataController.js"></script>
+<!--<script type="text/javascript" src="/js/controllers/dataController.js"></script>-->
+<script type="text/javascript" src="/coffee/dataController.js"></script>
 <script type="text/javascript" src="/js/controllers/graphicController.js"></script>
 <script type="text/javascript" src="/js/controllers/mapController.js"></script>
 <script type="text/javascript" src="/js/controllers/filterController.js"></script>
