--- a/views/index.html
+++ b/views/index.html
@@ -41,12 +41,12 @@
 		<div class="left" style="height: 100%">
 			<ng-view></ng-view>
 		</div>
-		<div class="right filter" ng-controller="filterController as filter">
+		<div class="right filter" ng-controller="FilterController as filter">
 			<div ng-repeat="field in filter.fields">
 				<label ng-if="field.type == 'select'" for="{{field.id}}"><span ng-bind="field.id"></span></label>
 				<br>
 				<select class="dropdown" ng-change="filter.applyFilter(field.id, field.selectedVal)"  ng-if="field.type == 'select'" id="{{field.id}}" ng-model="field.selectedVal">
-					<option value="-1" selected="selected">------</option>
+					<option value="-1" selected="selected"></option>
 					<option ng-repeat="value in field.values" value="{{value.id}}">{{value.name}}</option>
 				</select>
 
@@ -60,6 +60,7 @@
 					   type="range"
 					   min="{{field.minVal}}"
 					   max="{{field.maxVal}}"
+					   value="field.selectedVal"
 					   ng-model="field.selectedVal"
 					   ng-change="filter.applyFilter(field.id, field.selectedVal)"
 					   step="1">
@@ -83,9 +84,9 @@
 <script type="text/javascript" src="/js/factories/FilterFactory.js"></script>
 <script type="text/javascript" src="/js/controllers/mainController.js"></script>
 <!--<script type="text/javascript" src="/js/controllers/dataController.js"></script>-->
-<script type="text/javascript" src="/coffee/dataController.js"></script>
 <script type="text/javascript" src="/js/controllers/graphicController.js"></script>
 <script type="text/javascript" src="/js/controllers/mapController.js"></script>
+<script type="text/javascript" src="/coffee/dataController.js"></script>
 <script type="text/javascript" src="/js/controllers/filterController.js"></script>
 </body>
 </html>
