working on charts

--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
 </div>
 
 <script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
-<script type="text/javascript" src="/js/libraries/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="/js/libraries/jquery.min.js"></script>
 <script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/libraries/angular.min.js"></script>
 <script type="text/javascript" src="/js/libraries/angular-route.min.js"></script>
