Simple edit page

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,8 @@
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <script src="js/libraries/jquery.min.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaL34OGHlD9TpvJGoPT1MT4bZ_wJAjGNQ&callback=initMap"></script>
-
+<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+<link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
 
 </head>
 
@@ -70,13 +71,18 @@
 	</div>
 </div>
 
+<script src="/bower_components/angular/angular.min.js"></script>
+<script src="/bower_components/angular-aria/angular-aria.js"></script>
+<script src="/bower_components/angular-animate/angular-animate.js"></script>
+<script src="/bower_components/angular-material/angular-material.js"></script>
+
 <script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
 <script type="text/javascript" src="/js/libraries/jquery.min.js"></script>
 <script type="text/javascript" src="/js/libraries/bootstrap.min.js"></script>
-<script type="text/javascript" src="/js/libraries/angular.min.js"></script>
 <script type="text/javascript" src="/js/libraries/angular-route.min.js"></script>
 <script type="text/javascript" src="/js/libraries/underscore-min.js"></script>
 <script type="text/javascript" src="/js/libraries/highcharts-ng.js"></script>
+
 <script type="text/javascript" src="/js/main.js"></script>
 <script type="text/javascript" src="/js/routing.js"></script>
 
@@ -88,5 +94,6 @@
 <script type="text/javascript" src="/js/controllers/mapController.js"></script>
 <script type="text/javascript" src="/coffee/dataController.js"></script>
 <script type="text/javascript" src="/js/controllers/filterController.js"></script>
+<script type="text/javascript" src="/js/controllers/editorController.js"></script>
 </body>
 </html>
