--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,13 @@
 .view-container {
     float: right;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100%;
+}
+
+.main {
+    width:100%;
+    height:100%;
 }
 
 .md-sidenav-left {
@@ -15,4 +20,27 @@
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
     display: none !important;
+}
+
+html, body, #map_canvas {
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+}
+
+#map_canvas {
+    position: relative;
+}
+
+#map_wrapper {
+    padding: 20px;
+    height: 80%;
+}
+
+.angular-google-map-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
