--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,7 @@
 .main {
     width:100%;
     height:100%;
+    overflow: auto;
 }
 
 .md-sidenav-left {
@@ -15,7 +16,7 @@
 }
 
 .all-view {
-    height: 100%;
+    height: 90%;
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
@@ -34,7 +35,7 @@ html, body, #map_canvas {
 
 #map_wrapper {
     padding: 20px;
-    height: 80%;
+    height: 88%;
 }
 
 .angular-google-map-container {
@@ -43,4 +44,33 @@ html, body, #map_canvas {
     bottom: 0;
     right: 0;
     left: 0;
+}
+
+.rainbow {
+    display: inline-block;
+    width:230px;
+    height:40px;
+    border:1px solid #e4e4e4;
+    padding:15px;
+    font-size: 12px;
+    position: absolute;
+    right:0;
+    bottom:-80px;
+}
+
+.box-wrap {
+    display: inline-block;
+    margin: 0 1px;
+}
+
+.actions {
+    display: inline-block;
+}
+
+.box {
+    display: inline-block;
+    width:30px;
+    height:30px;
+    border:1px solid #e4e4e4;
+    opacity: 0.35;
 }
