--- a/public/css/main.css
+++ b/public/css/main.css
@@ -113,3 +113,6 @@ html, body {
 md-checkbox.md-checked.blue .md-icon {
     background-color: rgb(63,81,181)
 }
+.my-select {
+    width: 350px;
+}
