change info format in infoboxes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,25 +65,22 @@ html, body {
 .rainbow {
     display: inline-block;
     width:230px;
-    height:40px;
     border:1px solid #e4e4e4;
     padding:15px;
     font-size: 12px;
 }
 
-.box-wrap {
-    display: inline-block;
-    margin: 0 1px;
+.rainbow label {
+    margin-bottom: 4px;
 }
-
 .actions {
     display: inline-block;
 }
 
 .box {
     display: inline-block;
-    width:30px;
-    height:30px;
+    width:17px;
+    height:17px;
     border:1px solid #e4e4e4;
     opacity: 0.35;
 }
