--- a/client/css/main.css
+++ b/client/css/main.css
@@ -11,6 +11,12 @@
     overflow: auto;
 }
 
+.icon-arrow {
+    position: absolute !important;
+    right: 0;
+    z-index: 10;
+}
+
 .md-sidenav-left {
     width: 20%;
 }
